--- a/rhsm-canary/templates/dstrategies-back-analysis-template.yaml
+++ b/rhsm-canary/templates/dstrategies-back-analysis-template.yaml
@@ -14,6 +14,7 @@ spec:
     failureLimit: 2
     provider:
       prometheus:
+        insecure: true      
         address: https://internal:<PROMETHEUS-PASSWORD>@prometheus.istio-system.svc.cluster.local:9090
         query: |
                     sum(irate( istio_requests_total{reporter="source",destination_service_name=~"dstrategies-back",response_code!~"5.*"}[30s] )) / sum(irate( istio_requests_total{reporter="source",destination_service_name=~"dstrategies-back"}[30s] ))
